# cnb-cluer

./: config.py  pyproject.toml  word_pair_clues.csv  word_pair_tryouts.csv
cnb_clue_generator/: add_scenarios.py  evaluate_clues.py  evaluate_guesses.py  generate_clues.py  generate_guesses.py  gpt_completer.py  utils.py
cnb_clue_generator/clue_generators/: gpt_simple_clue_generator.py  vector_clue_generator.py
cnb_clue_generator/guessers/: gpt_guesser.py
cnb_clue_generator/models/: clue_generator_base.py  gpt_clue_generator_base.py  gpt_simple_clue_generator.py  vector_clue_generator.py
cnb_cluer/: evaluate_combos.py  generate_clues.py  get_guesses.py  utils.py
cnb_cluer/models/: cluer_base.py  vector_cluer.py
cnb_cluer/models/gpt/: concept_cot_cluer.py  concept_cot_reversed_cluer.py  cot_cluer.py  gpt_cluer.py  gpt_completer.py  relation_cot_cluer.py  simple_cluer.py  simple_neg_cluer.py  simple_reversed_cluer.py
cnb_cluer/models/sampler_cluer/: gpt_guesser.py  guesser_base.py  sampler_cluer.py  vote_guesser.py
data/: guesses.yaml  scenarios.yaml
generated_clues/: glove_clues.yaml  gpt-concept-cot-reversed_clues.yaml  gpt-concept-cot_clues.yaml  gpt-cot_clues.yaml  gpt-relation-cot_clues.yaml  gpt-relation-cot_clues_old.yaml  gpt-simple-neg_clues_old.yaml  gpt-simple-reversed_clues.yaml  gpt-simple_clues.yaml  gpt-simple_clues_old.yaml  sampler_clues.yaml
generated_clues/notes/: gpt-concept-cot-reversed_clues.yaml  gpt-concept-cot_clues.yaml  gpt-cot_clues.yaml  gpt-relation-cot_clues.yaml  gpt-relation-cot_clues_old.yaml  gpt-simple-reversed_clues.yaml  gpt-simple_clues.yaml  gpt-simple_clues_old.yaml  sampler_clues.yaml
models/: evaluate_clues.py  generate_clues.py  utils.py
tools/: label_types.py  test_gensim.py
