[tool.poetry]
name = "cnb-clue-generator"
version = "0.1.0"
description = ""
authors = ["Nalu Zou"]
readme = "README.md"
packages = [{include = "cnb_clue_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
gensim = "^4.2.0"
tqdm = "^4.64.1"

[tool.poetry.scripts]
generate-clues  = "cnb_clue_generator.generate_clues:main"
evaluate-clues  = "cnb_clue_generator.evaluate_clues:main"

test-gensim     = "tools.test_gensim:main"
label-types     = "tools.label_types:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
